--- a/package.json
+++ b/package.json
@@ -1,12 +1,42 @@
 {
-  "name": "suda-lint-rules",
+  "name": "eslint-config-suda",
   "version": "1.0.0",
-  "main": ".eslintrc.js",
+  "description": "Readable TypeScript向けに調整したESLint共有設定",
+  "main": "config/index.js",
+  "files": [
+    "config",
+    "README.md"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint:test": "eslint --config config/index.js --print-config config/index.js > /dev/null"
   },
-  "keywords": [],
+  "keywords": [
+    "eslint",
+    "eslintconfig",
+    "typescript",
+    "prettier"
+  ],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "peerDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.47.0",
+    "@typescript-eslint/parser": "^8.47.0",
+    "typescript-eslint": "^8.47.0",
+    "eslint": "^9.39.1",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-config-prettier": "^10.1.8",
+    "prettier": "^3.6.2"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.47.0",
+    "@typescript-eslint/parser": "^8.47.0",
+    "typescript-eslint": "^8.47.0",
+    "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import": "^2.31.0",
+    "prettier": "^3.6.2"
+  },
+  "publishConfig": {
+    "access": "public"
+  }
 }
